# VGDLax

./: .gitignore  README.md  pyproject.toml
benchmarks/: plot_comparison.py  profile_effects.py  profile_jax.py  profile_portals.py  profile_pyvgdl.py  profile_step.py  throughput.py
benchmarks/results/pyvgdl/: Aliens.json  BoulderDash.json  Chase.json  Frogs.json  MissileCommand.json  Portals.json  Sokoban.json  SurviveZombies.json  Zelda.json
scripts/: bfs_solve.py  validate_all.py
tests/: FEATURE_PARITY.md  MECHANICS_DIFF.md  conftest.py  rng_replay.py  state_extractor.py  test_collision.py  test_compiler.py  test_continuous.py  test_cross_engine.py  test_data_model.py  test_effects.py  test_env.py  test_integration_aliens.py  test_integration_boulderdash.py  test_integration_chase.py  test_integration_common.py  test_integration_frogs.py  test_integration_portals.py  test_integration_sokoban.py  test_integration_survivezombies.py  test_integration_zelda.py  test_parser.py  test_render.py  test_render_pygame.py  test_sprites.py  test_state.py  test_step.py  test_terminations.py  test_validate.py  validate_harness.py
validation_results/: bfs_results.json  results.json
validation_results/per_game/aliens/: trajectory_cycling.json  trajectory_noop.json  (+1 more)
validation_results/tables/: bfs_solvability.tex  validation_summary.tex
vgdl_jax/: collision.py  compiler.py  data_model.py  effects.py  env.py  parser.py  render.py  sprites.py  state.py  step.py  terminations.py
vgdl_jax/validate/: __init__.py  constants.py  harness.py  rng_replay.py  state_extractor.py
(+19 files in other folders)
