[project]
name = "vgdl-jax"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "jax[cpu]",
    "flax",
    "chex",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["tests"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
